testdata/invalid/type-mismatch.pakt
# ERROR: string value assigned to int type
count:int = 'not a number'
